# nemli-nemlerei-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  .pre-commit.sh  Dockerfile  README.md  docker-compose.yml  pre-commit.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
nemli/: __init__.py  config.py  main.py
nemli/commands/utility/: help.py  ping.py  refute.py  summarize.py
nemli/nlp/: messages.py
nemli/nlp/llm/: chat.py
nemli/schemas/: messages.py  prompt_style.py
nemli/services/: messages.py
pre-commit/: run-pdm-format.sh  run-pdm-install.sh  run-pdm-test.sh
tests/: conftest.py  test_main.py  test_msg_separarion.py  test_parsed_discord_messages.py  test_stopwords.py
tests/extras/: mocks.py
tests/services/: messages.py  test_messages.py
